--- a/packages/nouns-webapp/public/index.html
+++ b/packages/nouns-webapp/public/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <script defer data-domain="nouns.wtf" src="https://plausible.io/js/plausible.js"></script>
+    <script defer data-domain="alps.wtf" src="https://plausible.io/js/plausible.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="One Alps, every 3 hours, forever." />
+    <meta
+      name="description"
+      content="One Alp, every three hours, forever. Alps DAO is an experiment on the Ethereum blockchain."
+    />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
